# bioscopeai-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bioscopeai-core-config-example.yaml  pyproject.toml
.github/workflows/: main_bioscopeai_core.yml
bioscopeai_core/app/: main.py
bioscopeai_core/app/api/: api.py  health.py
bioscopeai_core/app/auth/: __init__.py  auth.py  permissions.py  service_user.py
bioscopeai_core/app/core/: config.py  logging_config.py  s3_client.py
bioscopeai_core/app/crud/: base.py
bioscopeai_core/app/db/: __init__.py  init_db.py
bioscopeai_core/app/models/: __init__.py  user.py
bioscopeai_core/app/schemas/: __init__.py
bioscopeai_core/app/services/: classification_result.py  storage_service.py
bioscopeai_core/tests/: conftest.py  test-config.yaml  test_auth.py
bioscopeai_core/tests/integration/: test_api_auth.py  test_api_classification.py  test_api_datasets.py  test_api_devices.py  test_api_images.py  test_api_users.py  test_crud.py
bioscopeai_core/tests/unit/: test_crud_base.py  test_crud_classification.py  test_crud_dataset.py  test_crud_device.py  (+1 more)
docs/: ERD.md  ERD.mmd  ERD.puml  ERD.txt  SERVICE_TOKEN.md  bioscopeai-core-config-example.yaml
docs/supervisord/: bioscopeai-core-api.conf
migrations/models/: 0_20251101173125_init.py  1_20251104233606_update.py  2_20251109161131_add_device.py  3_20251109161336_add_datasets_images.py  4_20251109161401_add_classification_results.py  5_20251118232912_alter_model_name_field.py
scripts/: generate_service_token.py  run_tests.sh
(+61 files in other folders)
